# antidetect

./: README.md
VirtualPhonePro/: CMakeLists.txt  CMakePresets.json  README.md
VirtualPhonePro/include/: DeviceProfile.hpp  Logger.hpp  ReDroidController.hpp
VirtualPhonePro/network/: docker-compose-network.yml  setup-leak-prevention.sh
VirtualPhonePro/src/: main.cpp
VirtualPhonePro/src/common/: Logger.cpp
VirtualPhonePro/src/core/: DeviceProfile.cpp  ReDroidController.cpp
VirtualPhonePro/src/network/: NetworkController.cpp  NetworkController.hpp
anti-detect-emulator/: ANTI-DETECT-README.md
anti-detect-emulator/config/: init.antidetect.rc  redroid-antidetect.prop
anti-detect-emulator/docker/: docker-compose.yml
anti-detect-emulator/scripts/: antidetect-init.sh  emulator-manager.sh  setup-kernel.sh
